# gio-automount

./: .gitignore  Makefile.am  Makefile.in  README  configure  configure.ac
data/: Makefile.am  Makefile.in  gio-automount.desktop
debian/: changelog  control  copyright
src/: Makefile.am  Makefile.in  gio-automount.c
